# jarvis

./: .env  .env.example  .gitignore  .ocamlformat  Makefile  NEW_COMMANDS.md  README.md  dune  dune-project  install.sh  jarvis.ml  jarvis.opam  uninstall.sh
lib/: api.ml  api.mli  command.ml  command.mli  config.ml  config.mli  dune  error.ml  error.mli  executor.ml  executor.mli  jarvis.ml  jarvis.mli  utils.ml  utils.mli
prompts/: jarvis.vrt
scripts/: jarvis.bash  jarvis.fish
